<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="70">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="5"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/bhaichara_tv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="30dp"
            android:layout_alignParentTop="true"
            android:background="@color/green"
            android:text="Bhai Chara"/>


    </LinearLayout>



        <TextView
            android:id="@+id/welcome_signup"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/creatingText"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/phone_number_signup"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:gravity="center"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="sdadsdssdsdas"
            android:textSize="27sp"
            />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="10"
        android:layout_height="0dp">
        <EditText
            android:id="@+id/first_name_ed"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:textColor="@color/appcolordark"
            android:gravity="center"
            android:layout_marginHorizontal="90dp"
            android:layout_gravity="center"
            android:hint="@string/firstName"
            android:inputType="text"
            android:textSize="20dp"

            /></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="10"
        android:layout_height="0dp">
        <EditText

            android:id="@+id/last_name_ed"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:textColor="@color/appcolordark"
            android:gravity="center"
            android:layout_marginHorizontal="90dp"
            android:layout_gravity="center"
            android:hint="@string/lastName"
            android:inputType="text"
            android:textSize="20dp"
            android:layout_below="@+id/first_name_ed"/></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="10"
        android:layout_height="0dp">
        <EditText
            android:id="@+id/email_ed"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:textColor="@color/appcolordark"
            android:gravity="center"
            android:layout_marginHorizontal="90dp"
            android:layout_gravity="center"
            android:hint="@string/emailID"
            android:inputType="textEmailAddress"
            android:textSize="20dp"
            android:layout_below="@+id/last_name_ed"/></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="9"
        android:layout_height="0dp">

        <EditText

            android:id="@+id/code_ed"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:textColor="@color/appcolordark"
            android:gravity="center"
            android:layout_marginHorizontal="90dp"
            android:layout_gravity="center"
            android:hint="@string/groupCode"
            android:inputType="number"
            android:textSize="20dp"
            android:layout_below="@+id/email_ed"/></LinearLayout>
    <CheckBox
        android:id="@+id/checkbox_driver_cb"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:text="Register me as a driver"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="7"
        android:layout_height="0dp">

        <Button
            android:id="@+id/signup_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/signUpBT"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:background="@color/green"/></LinearLayout>

</LinearLayout>